--- a/pre-build/scss/scss-build/media.css
+++ b/pre-build/scss/scss-build/media.css
@@ -30,6 +30,12 @@
 }
 
 @media screen and (max-width: 768px) {
+  *::-webkit-scrollbar {
+    display: none;
+  }
+  *.mobScroll::-webkit-scrollbar {
+    display: block;
+  }
   .leftArea {
     left: -300px;
     -webkit-transition: .3s;
