--- a/pre-build/scss/scss-build/component.css
+++ b/pre-build/scss/scss-build/component.css
@@ -1455,6 +1455,7 @@ code[class*=language-], pre[class*=language-] pre {
 #frameBody {
   display: none;
   position: absolute;
+  top: 0;
   width: 100%;
   height: 100%;
   background-color: #fff;
