다크모드 작업중

--- a/pre-build/scss/scss-build/component.css
+++ b/pre-build/scss/scss-build/component.css
@@ -25,7 +25,16 @@
 
 /* text color */
 /* background */
+/* darkMode */
 /* reset */
+:root[color-theme='light'] {
+  --background: #fff;
+}
+
+:root[color-theme='dark'] {
+  --background: #121212;
+}
+
 :root {
   overflow-wrap: break-word;
 }
@@ -130,6 +139,10 @@ pre {
 
 .tScroll {
   display: block;
+}
+
+html {
+  background: var(--background);
 }
 
 .wrap.pre.h2000 {
@@ -740,7 +753,7 @@ pre {
 .headArea > .inner .utilArea li button.btnDarkMode, .headArea > .inner .utilArea li a.btnDarkMode {
   width: 30px;
   height: 30px;
-  background-image: url("../images/ico/ico-brightness.png");
+  background-image: url("../../images/ico/ico-brightness.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 30px 30px;
@@ -1485,11 +1498,7 @@ code[class*=language-], pre[class*=language-] pre {
 
 #frameBody {
   display: none;
-<<<<<<< HEAD
-  position: absolute;
-=======
   position: fixed;
->>>>>>> b40a4aa1823bc344d8a6225b6a0fa1f6a86cc4b5
   top: 0;
   width: 100%;
   height: 100%;
@@ -1589,12 +1598,6 @@ i.ico {
   background-repeat: no-repeat;
   background-position: center;
   /* White type */
-}
-
-i.ico.plus-w {
-  width: 32px;
-  height: 32px;
-  background-image: url("../../package-lock.json");
 }
 
 i.ico.download-w {
@@ -1733,6 +1736,7 @@ i.ico.center {
 /* import */
 /* text color */
 /* background */
+/* darkMode */
 .wrap.pre.headerFixed .container, .wrap.pre.headerScroll .container, .wrap.pre.headerToggle .container {
   position: relative;
 }
@@ -1852,6 +1856,7 @@ i.ico.center {
 
 /* text color */
 /* background */
+/* darkMode */
 .wrap.pre.gnbHover .container, .wrap.pre.gnb-li-hover .container, .wrap.pre.gnbFind .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -1952,6 +1957,7 @@ i.ico.center {
 
 /* text color */
 /* background */
+/* darkMode */
 .wrap.pre.footerBasic .contents {
   width: 100%;
 }
@@ -2132,6 +2138,7 @@ i.ico.center {
 
 /* text color */
 /* background */
+/* darkMode */
 .wrap {
   position: relative;
   width: 100%;
@@ -2769,6 +2776,7 @@ i.ico.center {
 
 /* text color */
 /* background */
+/* darkMode */
 .customSelect {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3033,6 +3041,7 @@ input[type="image"], input[type="color"], input[type="button"] {
 
 /* text color */
 /* background */
+/* darkMode */
 .mouseMenu {
   display: none;
   position: absolute;
@@ -3059,6 +3068,7 @@ input[type="image"], input[type="color"], input[type="button"] {
 
 /* text color */
 /* background */
+/* darkMode */
 .wrap.pre.popShowHide, .wrap.pre.dragPop {
   position: relative;
 }
@@ -3178,6 +3188,7 @@ input[type="image"], input[type="color"], input[type="button"] {
 
 /* text color */
 /* background */
+/* darkMode */
 #frameBody .wrap.pre.topButton .container {
   height: 100%;
   background-color: #ddd;
@@ -3289,7 +3300,7 @@ input[type="image"], input[type="color"], input[type="button"] {
 #frameBody .wrap.pre.bdAni .borderArea span:after {
   content: '';
   display: inherit;
-  border-bottom: 2px solid #000;
+  border-bottom: 2px solid #266bf7;
   -webkit-transform: scaleX(0);
           transform: scaleX(0);
   -webkit-transition: .5s;
@@ -3317,6 +3328,7 @@ input[type="image"], input[type="color"], input[type="button"] {
 
 /* text color */
 /* background */
+/* darkMode */
 .resultArea .inner .toolTipBox {
   position: relative;
   width: 150px;
@@ -3356,6 +3368,7 @@ input[type="image"], input[type="color"], input[type="button"] {
 
 /* text color */
 /* background */
+/* darkMode */
 @media screen and (max-width: 1280px) {
   .titleH1 {
     font-size: 1.75em;
