--- a/pre-build/scss/common/component.scss
+++ b/pre-build/scss/common/component.scss
@@ -24,9 +24,16 @@
   src: url(./font/notoSans/eot/NotoSansKR-Medium-Hestia.eot?#iefix) format("embedded-opentype"), url(./font/notoSans/woff/NotoSansKR-Medium-Hestia.woff) format("woff");
 }
 
-@import '../common/variable.scss';       
+@import '../common/variable.scss';    
 
 /* reset */
+:root[color-theme='light']{
+  --background: #{$whiteBg};
+}
+
+:root[color-theme='dark']{
+  --background: #{$body};
+}
 :root{overflow-wrap: break-word;}
 body,html{width: 100%;height: 100%;margin: 0;padding: 0; font-family:'Noto Sans DemLight', "맑은 고딕", "Malgun Gothic", Dotum, sans-serif;color: $c333;letter-spacing:-0.65px !important;}
 :where(html, body, div, span, object,h1, h2, h3, h4, h5, h6, p, blockquote, a, button, abbr, address, img, q,dl, dt, dd, ol, ul, li,fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td,article, aside, footer, header, section, summary){
@@ -52,6 +59,12 @@ pre{word-break:break-all;white-space:pre-line;margin: 0 !important;}
   &.maxH4{max-height: 400px;}
 }
 .tScroll{display: block;}
+
+
+
+html{
+  background: var(--background);
+}
 
 .wrap.pre.h2000{height: 2000px;}
 #wrap{width: 100%; height: 100%;
@@ -229,7 +242,7 @@ overflow-y: auto; background-color: #f5f5f5; z-index: 1100;
           &.btnMail{background: url("../../images/ico/ico-mail.svg")no-repeat center;}
           &.btnShare{background: url("../../images/ico/ico-share-bk.svg")no-repeat center;}
           &.btnMore{background: url("../../images/ico/ico-more.svg")no-repeat center;}
-          &.btnDarkMode{width: 30px; height: 30px; background-image: url("../images/ico/ico-brightness.png"); background-position: center;
+          &.btnDarkMode{width: 30px; height: 30px; background-image: url("../../images/ico/ico-brightness.png"); background-position: center;
           background-repeat: no-repeat; background-size: 30px 30px;}
         }
         +li{margin-left: 30px;}
@@ -505,7 +518,6 @@ background-color: rgba($color: $blackBg, $alpha: 0.65);
 /* icon */
 i.ico{display: inline-block; background-repeat: no-repeat; background-position: center;
   /* White type */
-  &.plus-w{width: 32px; height: 32px; background-image: url("../../package-lock.json");}
   &.download-w{width: 48px; height: 48px; background-image: url("../../images/ico/ico-download-w.png");}
   &.bookMark-w{width: 48px; height: 48px; background-image: url("../../images/ico/ico-bookMark-w.png");}
   &.github-w{width: 48px; height: 48px; background-image: url("../../images/ico/ico-github-w.png");}
