--- a/pre-build/scss/common/component.scss
+++ b/pre-build/scss/common/component.scss
@@ -27,13 +27,6 @@
 @import '../common/variable.scss';    
 
 /* reset */
-:root[data-theme='light']{
-  --background: #{$whiteBg};
-}
-
-:root[data-theme='dark']{
-  --background: #{$body};
-}
 :root{overflow-wrap: break-word;}
 body,html{width: 100%;height: 100%;margin: 0;padding: 0; font-family:'Noto Sans DemLight', "맑은 고딕", "Malgun Gothic", Dotum, sans-serif;color: $c333;letter-spacing:-0.65px !important;}
 :where(html, body, div, span, object,h1, h2, h3, h4, h5, h6, p, blockquote, a, button, abbr, address, img, q,dl, dt, dd, ol, ul, li,fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td,article, aside, footer, header, section, summary){
@@ -60,10 +53,21 @@ pre{word-break:break-all;white-space:pre-line;margin: 0 !important;}
 }
 .tScroll{display: block;}
 
+body{
+  --d-bg: #fff;
+}
 
+body[data-theme='light']{
+  --d-bg: #fff;
+}
 
-html{
-  background: var(--background);
+body[data-theme='dark']{
+  --d-bg: #121212;
+}
+
+body{
+  color-scheme: light dark;
+  background: var(--d-bg);
 }
 
 .wrap.pre.h2000{height: 2000px;}
